[build-system]
requires = [
    "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "fileunity_workbooks"
version = "0.0.0"
description = "fileunity_workbooks"
readme = "README.rst"
authors = [
    { name = "Johannes", email = "johannes-programming@posteo.org" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = []
requires-python = ">=3.11"

[project.license]
file = "LICENSE.txt"

[project.urls]
Download = "https://pypi.org/project/fileunity-workbooks/#files"
Source = "https://github.com/johannes-programming/fileunity_workbooks"

